nivasa-macros/tests/trybuild/module_doc_set_metadata_invalid.stderr
error: invalid module set_metadata marker
 --> tests/trybuild/module_doc_set_metadata_invalid.rs:3:1
  |
3 | /// nivasa-set-metadata: missing-equals
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
