nivasa-macros/tests/trybuild/module_doc_set_metadata_invalid.rs
use nivasa_macros::module;

/// nivasa-set-metadata: missing-equals
#[module({})]
struct AppModule;

fn main() {}
